data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2005.wast
;; 6. **Test Description**:    - **Scenario**: An imported function containing a loop which uses `br_if` to conditionally jump back to the start, called from another module.    - **Constraint**: Ensure the continuation to the loop’s entry is properly handled, with the correct operand stack state.    - **Differential Focus**: Compare the outcomes of explicit vs. implicit management of loop parameters in both WASM and wizard_engine.

(assert_invalid
  (module
    (import "env" "loop_conditional" (func $loop_cond (param i32) (result i32)))
    (func (result i32)
      (block (loop (br_if 1 (call $loop_cond (i32.const 0))) (nop)))
    )
  )
  "invalid type"
)